--- a/Css en inicio.css
+++ b/Css en inicio.css
@@ -1,42 +1,46 @@
 /**/
+body{
+    background-color: rgb(255, 255, 255);
+}
 #title {
     color: white;
     text-align: center;
     font-weight: 900;
     background-color: rgb(88, 31, 141);
-    margin-left: -12%;
-    margin-right: -0.6%;
-    margin-top: -1.1%;
+    margin-left: -8px;
+    margin-right: -8px;
 }
 
 #linkface {
-    padding-left: 76%;
-    margin-top: -4%;
     color: rgb(255, 255, 255);
-
+    margin-top: -60px;
+    padding-left: 636px;
+    font-weight: 900;
 }
 
 #linkinst {
-    padding-left: 66%;
-    margin-top: -2.75%;
     color: rgb(255, 255, 255);
+    margin-top: -34px;
+    padding-left: 600px;
+    font-weight: 900;
 
 }
 
 #linktwitter {
-    padding-left: 60%;
-    margin-top: -2.75%;
     color: rgb(255, 255, 255);
+    margin-top: -34px;
+    padding-left: 573px;
+    font-weight: 900;
 
 }
 
 #text {
     color: black;
     font-style: oblique;
-    margin-top: -60%;
-    padding-left: 0%;
-    padding-bottom: 0%;
-    padding-right: 52%;
+    margin-left: 0px;
+    margin-right: 700px;
+    margin-top: -380px;
+ 
 
 
 
@@ -45,31 +49,40 @@
 #text2 {
     color: black;
     font-style: oblique;
-    padding-left: 0%;
-    padding-bottom: 20%;
-    padding-right: 52%;
+    margin-left: 0px;
+    margin-right: 700px;
+    
+
 
 }
 
 #Ventanas {
-    color: rgb(0, 0, 0);
-    margin-left: 0%;
-
-    font-style: italic;
+    color: rgb(255, 255, 255);
+    margin-top: 10px;
+    font-style: initial;
+    font-weight: 900;
+    background-color: rgb(0, 0, 0);
+    margin-left: -4px;
 }
 
 li {
     color: rgb(0, 0, 0);
     font-weight: 900;
     font-style: italic;
-    text-align: center;
+padding-left: 700px;
     list-style-type: square;
 }
 
 #img {
+    margin-top: -190px;
+    margin-right: -8px; 
     text-align: right;
 }
 
 #piepagina {
-    padding-top: 40%;
+    padding-top: 500px;
+}
+#nav{
+    padding-top: 4px;
+    margin-left: -10px;
 }
