--- a/Css en inicio.css
+++ b/Css en inicio.css
@@ -1,7 +1,9 @@
 /**/
-body{
-    background-color: rgb(255, 255, 255);
+body {
+    background-image: url("https://images8.alphacoders.com/530/530873.jpg");
+
 }
+
 #title {
     color: white;
     text-align: center;
@@ -10,15 +12,17 @@ body{
     margin-left: -8px;
     margin-right: -8px;
     width: 101%;
-    
+
 }
-#imgtop{
+
+#imgtop {
     margin-top: -35px;
-    width: 22%;
+    width: 22.5%;
     margin-left: -0.9%;
 
 
 }
+
 #linkface {
     color: rgb(0, 0, 0);
     margin-top: -60px;
@@ -40,50 +44,51 @@ body{
     padding-left: 546px;
     font-weight: 900;
 
+
 }
 
 #text {
-    color: black;
+    color: rgb(0, 0, 0);
     font-style: oblique;
-    margin-left: 0px;
-    margin-right: 700px;
     margin-top: -350px;
- 
-
-
+    
+    font-weight: 900;
 
 }
 
 #text2 {
-    color: black;
+    color: rgb(0, 0, 0);
     font-style: oblique;
-    margin-left: 0px;
-    margin-right: 700px;
-    
-
-
+  
+    font-weight: 900;
 }
 
 #Ventanas {
     color: rgb(255, 255, 255);
-    margin-top: 20px;
+    margin-top: 1.9%;
     font-style: initial;
     font-weight: 900;
-    background-color: rgb(0, 0, 0);
-    margin-left: -4px;
+    width: 15%;
+    background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQY8nkwzdoq81scdw82wRsH5G-q-9HG3JHIr2YWwlsPBsj6m8VjVAd9b48tyYNqgMMQPpQ&usqp=CAU");
+
 }
 
-li {
+#puntos {
     color: rgb(0, 0, 0);
     font-weight: 900;
     font-style: italic;
-padding-left: 700px;
+    text-align: right;
+    width: 58.8%;
     list-style-type: square;
+
+    /*background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQY8nkwzdoq81scdw82wRsH5G-q-9HG3JHIr2YWwlsPBsj6m8VjVAd9b48tyYNqgMMQPpQ&usqp=CAU");
+*/
+
 }
 
 #img {
     margin-top: -210px;
-    margin-right: -5px; 
+    margin-right: -5px;
     text-align: right;
 }
 
@@ -93,10 +98,17 @@ padding-left: 700px;
     background-color: rgb(88, 31, 141);
     font-size: 150%;
     font-style: oblique;
-   font-weight: 900;
+    font-weight: 900;
 }
-#nav{
+
+#nav {
     margin-top: 20px;
     margin-left: -10px;
 }
 
+#textofondo {
+    background-image: url("https://thumbs.dreamstime.com/b/fondo-de-textura-una-pieza-antigua-o-papiro-un-viejo-pedazo-papel-206411898.jpg");
+    width: 53%;
+
+
+}
