--- a/Css en inicio.css
+++ b/Css en inicio.css
@@ -9,39 +9,34 @@ body {
     text-align: center;
     font-weight: 900;
     background-color: rgb(88, 31, 141);
-    margin-left: -8px;
-    margin-right: -8px;
     width: 101%;
 
 }
 
 #imgtop {
-    margin-top: -35px;
-    width: 22.5%;
-    margin-left: -0.9%;
-
-
+    margin-top: -2.6%;
+    width: 19%;
 }
 
 #linkface {
     color: rgb(0, 0, 0);
-    margin-top: -60px;
-    padding-left: 626px;
+    margin-top: -3.3%;
+    padding-left: 81%;
     font-weight: 900;
 }
 
 #linkinst {
     color: rgb(0, 0, 0);
-    margin-top: -34px;
-    padding-left: 580px;
+    margin-top: -1.7%;
+    padding-left: 70%;
     font-weight: 900;
 
 }
 
 #linktwitter {
     color: rgb(0, 0, 0);
-    margin-top: -34px;
-    padding-left: 546px;
+    margin-top: -1.8%;
+    padding-left: 64%;
     font-weight: 900;
 
 
@@ -50,7 +45,7 @@ body {
 #text {
     color: rgb(0, 0, 0);
     font-family:Georgia, 'Times New Roman', Times, serif;
-    margin-top: -350px;
+    margin-top: -20%;
     font-size: 110%;
     font-weight: 900;
 
@@ -78,7 +73,7 @@ body {
     font-weight: 900;
     font-style: italic;
     text-align: right;
-    width: 58.8%;
+    width: 71%;
     list-style-type: square;
 
     /*background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQY8nkwzdoq81scdw82wRsH5G-q-9HG3JHIr2YWwlsPBsj6m8VjVAd9b48tyYNqgMMQPpQ&usqp=CAU");
@@ -87,13 +82,13 @@ body {
 }
 
 #img {
-    margin-top: -210px;
-    margin-right: -5px;
+    width: 100%;
     text-align: right;
+    margin-top: -14%;
 }
 
 #piepagina {
-    margin-top: 200px;
+    margin-top: 7.5%;
     color: rgb(255, 255, 255);
     background-color: rgb(88, 31, 141);
     font-size: 150%;
@@ -102,14 +97,11 @@ body {
 }
 
 #nav {
-    margin-top: 20px;
-    padding-left: 87%;
+    margin-top: 1.2%;
+    padding-left: 91%;
 }
 
 #textofondo {
     background-image: url("https://thumbs.dreamstime.com/b/fondo-de-textura-una-pieza-antigua-o-papiro-un-viejo-pedazo-papel-206411898.jpg");
     width: 53%;
-    height: 65vh;
-
-
 }
